# detours-cmake

./: .gitignore  CMakeLists.txt  build64.bat
dllinject/: CMakeLists.txt  consumer.cpp  dllheap.cpp  inject.cpp  producer.cpp  producer.h
